[package]
name = "chaos-engine"
description = "A rust crate to develop text-based games for terminals."
license = "MIT"
repository = "https://github.com/recleun/chaos-engine"
documentation = "https://docs.rs/chaos-engine"
version = "0.1.0"
edition = "2024"

[features]
test = []

[dependencies]
crossterm = "0.29.0"

[dev-dependencies]
chaos-engine = { path = ".", features = ["test"] }
